<i>Current bot version:</i> <b>v0.1.3</b>
<i>Changelog:</i>
- Changed the way reviews are deleted
- Rating is now 1-10